--- a/app/view/template/footer.phtml
+++ b/app/view/template/footer.phtml
@@ -1,1 +1,1 @@
-&copy; Dominik Ivković, edunova <?php echo '2020-' , date('Y'); ?> 
+&copy; Dominik Ivković, Edunova <?php echo '2020-' , date('Y'); ?> 
