Indication if I'm on local + css & public pages

--- a/app/view/template.phtml
+++ b/app/view/template.phtml
@@ -8,7 +8,7 @@
 
   <div class="grid-container">
     <?php include_once 'template/menu.phtml' ?>
-    <div class="callout">
+    <div id="program" class="callout">
       <?=$content?>
       </div>
       <?php include_once 'template/footer.phtml' ?>
