--- a/app/view/template/menu.phtml
+++ b/app/view/template/menu.phtml
@@ -7,9 +7,13 @@
 <div class="top-bar" id="responsive-menu">
     <div class="top-bar-left">
         <ul class="dropdown menu" data-dropdown-menu>
-        <li class="menu-text"><?=App::config('AppName')?></li>
-        <li><a href="#0">Two</a></li>
-        <li><a href="#0">Three</a></li>
+        <li>
+            <a href="<?App::config('url')?>">
+                <?App::config('AppName')?>
+            </a>
+        </li>
+        <li><a href="<?=App::config('url')?>index/era">ERA</a></li>
+        <li><a href="<?=App::config('url')?>index/contact">Contact</a></li>
     </ul>
 </div>
 <div class="top-bar-right">
