Contact, ERA diagram and menu adjustments

--- a/app/view/contact.phtml
+++ b/app/view/contact.phtml
@@ -1,1 +1,1 @@
-Contact
+<iframe src="https://www.google.com/maps/place/LEC+Studio,+Riot+Games/@52.4301071,13.544012,15z/data=!4m5!3m4!1s0x0:0xc2090147c0535f2d!8m2!3d52.4300701!4d13.5439419" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>></iframe>
