--- a/app/view/login.phtml
+++ b/app/view/login.phtml
@@ -12,3 +12,8 @@
     <?=$message?>
     </form>
 
+    op@edunova.hr
+    $2y$12$tZCLg9iAd4k59.EiiJBM5eFBUMN8fs1PdiBMx6ZmzeGjqOSVpYKje
+    dominik@edunova.hr
+    $2y$12$tZCLg9iAd4k59.EiiJBM5eFBUMN8fs1PdiBMx6ZmzeGjqOSVpYKje
+
