--- a/app/view/login.phtml
+++ b/app/view/login.phtml
@@ -13,7 +13,8 @@
     </form>
 
     op@edunova.hr
-    $2y$12$tZCLg9iAd4k59.EiiJBM5eFBUMN8fs1PdiBMx6ZmzeGjqOSVpYKje
+    edunova
+    
     dominik@edunova.hr
-    $2y$12$tZCLg9iAd4k59.EiiJBM5eFBUMN8fs1PdiBMx6ZmzeGjqOSVpYKje
+    edunova
 
