--- a/app/view/private/player/index.phtml
+++ b/app/view/private/player/index.phtml
@@ -4,7 +4,9 @@
 <?php foreach ($players as $player): ?>
     <li>
         <?=$player->name?>
-        <a href="#">Change</a>
+        <a href="<?=App::config('url')?>player/change?id=<?$player->id?>">
+            Change
+        </a>
         <a href="#">Delete</a>
     </li>
 <?php endforeach; ?>
