--- a/app/view/private/player/new.phtml
+++ b/app/view/private/player/new.phtml
@@ -4,32 +4,41 @@
 
     <h4 class="text-center">Add a new player</h4>
     <label>Name
-        <input type="text"name="name" value="<?=$player->name?>">    
+        <input type="text"name="name" value="<?=$player->name?>">   
+    </label>
+
+        
         
     <label>Surname
         <input type="text" name="trajanje" value="<?=$player->surname?>">
     </label>
 
+    <div class="grid-x grid-padding-x">
+        <div class="cell-large-4"> 
     <label>Country
         <input type="text" name="cijena" value="<?=$player->country?>">
     </label>
-
+    </div>
+    <div class="cell-large-4"> 
     <label>Nickname
         <input type="text" name="cijena" value="<?=$player->nickname?>">
     </label>
-
+    </div>
+    <div class="cell-large-4"> 
     <label>Lane
         <input type="text" name="cijena" value="<?=$player->lane?>">
     </label>
+    </div>  
+</div>
 
     <?=$message?>
 
     <div class="grid-x grid-padding-x">
-  <div class="cell medium-6 large-6">
+  <div class="cell small-6 large-6">
     <a class="alert button expanded" 
         href="<?=App::config('url')?>player/index">Back</a>
   </div>
-  <div class="cell medium-6 large-6">
+  <div class="cell small-6 large-6">
     <input type="submit" class="button expanded" value="Submit"></input>
   </div>
 </div>
