--- a/app/view/private/player/new.phtml
+++ b/app/view/private/player/new.phtml
@@ -10,23 +10,23 @@
         
         
     <label>Surname
-        <input type="text" name="trajanje" value="<?=$player->surname?>">
+        <input type="text" name="surname" value="<?=$player->surname?>">
     </label>
 
     <div class="grid-x grid-padding-x">
         <div class="cell-large-4"> 
     <label>Country
-        <input type="text" name="cijena" value="<?=$player->country?>">
+        <input type="text" name="country" value="<?=$player->country?>">
     </label>
     </div>
     <div class="cell-large-4"> 
     <label>Nickname
-        <input type="text" name="cijena" value="<?=$player->nickname?>">
+        <input type="text" name="nickname" value="<?=$player->nickname?>">
     </label>
     </div>
     <div class="cell-large-4"> 
     <label>Lane
-        <input type="text" name="cijena" value="<?=$player->lane?>">
+        <input type="text" name="lane" value="<?=$player->lane?>">
     </label>
     </div>  
 </div>
