Adding a new player fixes

--- a/app/view/private/player/change.phtml
+++ b/app/view/private/player/change.phtml
@@ -29,6 +29,6 @@ method="POST">
     <input type="submit" class="button expanded" value="Change"></input>
   </div>
 </div>
-<input type="hidden" name="sifra" value="<?=$player->id?>">
+<input type="hidden" name="id" value="<?=$player->id?>">
 
 </form>
